Reverted travis.yml back to java 8