@@ -4,7 +4,6 @@ import edu.uiowa.alloy2smt.Utils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -13,7 +12,7 @@ public class SampleModelTests
 {
     private Translation getExample(String fileName) throws IOException
     {
-        String content = Files.readString(Paths.get(fileName));
+        String content = new String(Files.readAllBytes(Paths.get(fileName)));
         Translation translation = Utils.translate(content);
         return translation;
     }
